# virtual-context

./: .agent-prompt.md  .gitignore  CLAUDE.md  LICENSE  OVERNIGHT_ASSUMPTIONS.md  README.md  backfill_descriptions.py  embed_test.py  longmemeval_results_20260221_table.md  models.yaml  prompts.txt  prompts100.txt  prompts100v2.txt  prompts_adversarial.txt  prompts_coding_session.txt  pyproject.toml  run_itinerary_test.py  stress-test-prompts.txt  stress_test_user_messages_100_lines.txt  tests_by_section.sh  tests_timing_report.md  uploadpypi  virtual-context-compact-test.yaml  virtual-context-haiku-tagger.yaml  virtual-context-proxy.yaml  virtual-context.yaml  virtual-context.yaml.example
.github/workflows/: python-publish.yml
benchmarks/amb/: vc_provider.py
benchmarks/beam/: README.md  __main__.py  autopsy_report.py  compare_runs.py  dataset.py  judge.py  run_beam.py  vc_runner.py
benchmarks/locomo/: baseline.py  dataset.py  run.py  scoring.py  vc_runner.py
benchmarks/longmemeval/: .gitignore  __main__.py  auth.py  autopsy_report.py  baseline.py  bug018_rerun_4f54b7c9.json  config.yaml  cost.py  dataset.py  judge.py  longmemeval_full_rerun.json  longmemeval_q2_fresh.json  openai_codex.py  results_20q.json  results_20q_v2.json  results_q11to14_v3.json  results_q12_v3_fresh.json  results_q12_v3_rerun.json  results_q1_v3.json  results_q2_v3.json  results_q3_v3.json  results_q4_v3.json  results_q5_v3.json  results_q6q7_v3.json  results_q8_v3_rerun.json  results_q8_v3_rerun2.json  results_q8q9q10_v3.json  run.py  smoke_test_batch2.json  tally.py  vc_runner.py
benchmarks/mrcr/: __main__.py  autopsy_report.py  baseline.py  dataset.py  grader.py  run.py  vc_runner.py
docs/: architecture.md  benchmarks.md  commands.md  configuration.md  design.md  engine.md  install.md  paging-implementation-plan.md  plan-per-port-presets.md  proxy.md
docs/plans/: 2026-03-02-enriched-fact-extraction-design.md  2026-03-02-enriched-fact-extraction-plan.md  2026-03-03-fact-curation.md  2026-03-03-supersession-object-similarity.md  2026-03-03-temporal-date-quality-design.md  2026-03-03-temporal-date-quality.md  2026-03-04-telemetry-system-design.md  2026-03-04-telemetry-system-plan.md  2026-03-07-proxy-025-budget-enforced-stubbing-design.md  2026-03-07-proxy-025-budget-enforced-stubbing.md
extraneous/paper/: virtual_context_paper_latest.md
paper/: virtual_context_paper.md
scripts/: install.ps1  install.sh  model_eval_battery.py
scripts/model_eval_battery_pkg/: README.md  run_battery.py
specs/: cache-aware-compaction.md
tests/: REGRESSION_MAP.md  conftest.py  docker-compose.test.yml  pg_helpers.py  test_active_compaction_op_invariants.py  test_actor_attribution.py  test_actor_backfills.py  test_actor_card_assembly.py  test_actor_cards.py  test_actor_cards_postgres.py  test_actor_fact_attribution.py  test_actor_id_normalization_postgres.py  test_actor_identity.py  test_admin_authority_catalogue.py  test_admin_backfill_cli.py  test_admin_backfill_session_state_markers.py  test_ambient_observations.py  test_assembler.py  test_backend_integration.py  test_backfill_sender_profiles.py  test_beam_judge.py  test_broad_query.py  test_budget_enforcement.py  test_canonical_admission_parity.py  test_canonical_resequence.py  test_canonical_row_epoch_guards.py  test_canonical_row_epoch_guards_postgres.py  test_canonical_turn_grouping.py  test_canonical_turn_id_stamping.py  test_canonical_turns_schema.py  test_canonical_turns_schema_postgres.py  test_channel_attribution.py  test_channel_attribution_postgres.py  test_channel_backfill.py  test_channel_quote_search.py  test_claim_compaction_lease_signature.py  test_claim_compaction_lease_signature_postgres.py  test_classifier_keyword.py  test_classifier_pipeline.py  test_cleanup_abandoned_compaction.py  (+227 more)
tests/fixtures/: README.md  __init__.py  reserved_seats_diag_ctx.json  seed_realistic_target_conv.py  target_baseline.sql  target_baseline_redis.json
tests/haiku/: __init__.py  conftest.py  test_compaction.py  test_retrieval.py  test_tagging.py
tests/ollama/: conftest.py  test_compactor.py  test_pipeline.py  test_provider.py  test_tag_generator.py
tests/proxy/: test_dashboard_cors.py  test_metrics.py
virtual_context/: __init__.py  config.py  conversation_identity.py  engine.py  model_limits.py  patterns.py  token_counter.py  types.py
virtual_context/classifiers/: __init__.py  base.py  keyword.py
virtual_context/cli/: import_cmd.py  main.py
virtual_context/core/: assembler.py  canonical_resequence.py  canonical_turns.py  compaction_pipeline.py  compactor.py  composite_store.py  conversation_store.py  cost_tracker.py  coverage_report.py  embedding_provider.py  embedding_tag_generator.py  engine_utils.py  event_bus.py  exceptions.py  fact_query.py  fts_preprocessor.py  full_text_backfill.py  hint_builder.py  ingest_reconciler.py  lifecycle_epoch.py  llm_utils.py  math_utils.py  model_catalog.py  monitor.py  paging_manager.py  progress_events.py  progress_snapshot.py  protected_window.py  protocols.py  provider_adapters.py  quote_search.py  retrieval_assembler.py  retrieval_scoring.py  retriever.py  search_engine.py  segmenter.py  semantic_search.py  speaker_labels.py  speaker_roster.py  state_recovery.py  (+13 more)
virtual_context/data/: models.yaml
virtual_context/import_adapters/: __init__.py  base.py  chatgpt.py  claude.py  devin.py  grok.py  loader.py
virtual_context/ingest/: __init__.py  curator.py  date_resolver.py  (+3 more)
(+56 files in other folders)
