[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-context"
version = "0.2.1"
description = "OS-style virtual memory for LLM session context management"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "dateparser>=1.2",
    "anthropic>=0.40",
    "openai>=1.50",
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "tiktoken>=0.7",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "mcp>=1.0",
    "textual>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
neo4j = ["neo4j>=5.0"]
falkordb = ["falkordb>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
]

[project.scripts]
virtual-context = "virtual_context.cli.main:main"

[tool.hatch.build.targets.wheel]
artifacts = ["virtual_context/proxy/static/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/ollama --ignore=tests/haiku --ignore=tests/tui -m 'not slow' -n auto"
markers = [
    "ollama: tests requiring a running Ollama instance with qwen3:4b-instruct-2507-fp16",
    "haiku: tests requiring ANTHROPIC_API_KEY for Haiku integration",
    "regression: regression test for a specific bug ID (e.g., regression('BUG-004'))",
    "slow: tests that take >1s (TUI, full engine integration)",
]
